package appointmentschedulingsystem.appointmentschedulingsystem;

/**
 * Appointment status values.
 *
 * @author Ahmed
 * @version 1.0
 */
public enum AppointmentStatus {
    /** Appointment is confirmed. */
    CONFIRMED,
    /** Appointment is cancelled. */
    CANCELLED
}
