package appointmentschedulingsystem.appointmentschedulingsystem;

/**
 * Supported appointment types.
 *
 * @author Ahmed
 * @version 1.0
 */
public enum AppointmentType {
    /** Urgent appointment. */
    URGENT,
    /** Follow-up appointment. */
    FOLLOW_UP,
    /** Assessment appointment. */
    ASSESSMENT,
    /** Virtual appointment. */
    VIRTUAL,
    /** In-person appointment. */
    IN_PERSON,
    /** Individual appointment. */
    INDIVIDUAL,
    /** Group appointment. */
    GROUP
}
